--- a/requirements.txt
+++ b/requirements.txt
@@ -40,7 +40,8 @@ kiwisolver==1.4.8
 lxml==5.3.0
 MarkupSafe==3.0.2
 matplotlib==3.10.0
-mediapipe==0.10.20
+# mediapipe==0.10.20
+mediapipe==0.10.18
 ml_dtypes==0.5.1
 mpmath==1.3.0
 msgpack==1.1.0
@@ -57,7 +58,8 @@ pillow==11.1.0
 protobuf==4.25.5
 psutil==6.1.1
 psycopg==3.2.4
-psycopg2==2.9.10
+# psycopg2==2.9.10
+psycopg2-binary==2.9.10
 py-cpuinfo==9.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
@@ -107,3 +109,4 @@ webencodings==0.5.1
 xhtml2pdf==0.2.16
 zope.interface==7.2
 zopfli==0.2.3.post1
+groq==0.4.2
